# kraken-sdk

./: .clang-tidy  .gitignore  BUILDING.md  BUILDING_WINDOWS.md  CMakeLists.txt  CMakePresets.json  Implementation plan.md  LICENSE  README.md  README_CI_TESTING.md  SDK Client_Lay the groundwork for faster, smarter.md  analyze_ci_issues.sh  clang_tidy_output.txt  setup_wsl.sh  test_ci_local.sh  test_ci_macos.sh  test_ci_windows.ps1
.github/workflows/: ci.yml
benchmarks/: bench_backpressure.cpp  bench_checksum.cpp  bench_orderbook.cpp  bench_parser.cpp  bench_queue.cpp
cmake/: KrakenSDKConfig.cmake.in
docs/: ARCHITECTURE.md  BENCHMARKS.md  BENCHMARK_RESULTS.md  CI_CD.md  COMPETITIVE_ANALYSIS.md  CONFIGURATION_ROADMAP.md  CONFIGURATION_VALIDATION.md  CRITICAL_ANALYSIS.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOXYGEN_DOCUMENTATION.md  ENTERPRISE_READINESS.md  ENVIRONMENT_VARIABLES.md  METRICS.md  NEXT_FEATURES_ANALYSIS.md  OFFLINE_REPLAY.md  OTEL_STATUS.md  POTENTIAL_ISSUES.md  PROJECT_ANALYSIS.md  REFACTORING_PLAN.md  ROADMAP.md  SDK_ENHANCEMENT_PLAN.md  STATUS_SUMMARY.md  STRATEGY_CONFIGURATION.md  STRATEGY_ENGINE.md  STRATEGY_FLEXIBILITY_ANALYSIS.md  STRATEGY_FLEXIBILITY_SUMMARY.md  STRESS_TESTING.md  SUBMISSION.md  TEST_RESULTS.md  creative-differentiators.md  future-enhancements.md  kraken-api-reference.md  raii-rule-of-5.md  spsc-queue-design.md  strategy-engine-design.md
examples/: README.md  README_CONFIG.md  common.cpp  common.hpp  config.cfg.example  config.cpp  config.hpp  custom_strategy_example.cpp  dashboard.cpp  data_collector.cpp  offline_replay.cpp  orderbook.cpp  quickstart.cpp  strategies.cpp  telemetry.cpp  trading_bot.cpp  web_backend.cpp
include/kraken/: backoff.hpp  client.hpp  config.hpp  config_env.hpp  connection_config.hpp  error.hpp  gap_detector.hpp  kraken.hpp  logger.hpp  metrics.hpp  queue.hpp  rate_limiter.hpp  strategies.hpp  subscription.hpp  telemetry.hpp  types.hpp
include/kraken/connection/: circuit_breaker.hpp  connection_config.hpp  gap_detector.hpp
include/kraken/core/: client.hpp  config.hpp  types.hpp
include/kraken/strategies/: base.hpp  composite.hpp  presets.hpp  price_alert.hpp  spread_alert.hpp  strategies.hpp  strategy_config.hpp  volume_spike.hpp
include/kraken/telemetry/: config.hpp  metrics_collector.hpp  otlp_exporter.hpp  prometheus_server.hpp  telemetry.hpp
learning/: 01_CPP17_FEATURES.md  02_DESIGN_PATTERNS.md  03_CONCURRENCY.md  04_SYSTEM_DESIGN.md  05_NETWORKING.md  06_RESILIENCE.md  07_OBSERVABILITY.md  08_TESTING.md  Kraken-Exchange-CPP-Interview-Guide.md  README.md
scripts/: check_clang_tidy.sh
src/: auth.cpp  book_engine.cpp  book_engine.hpp  client.cpp  client_impl.cpp  client_impl.hpp  config.cpp  config_env.cpp  connection.cpp  connection.hpp  logger.cpp  parser.cpp  parser.hpp  queue.cpp  rate_limiter.cpp  strategy_config.cpp  strategy_engine.cpp  subscription.cpp  telemetry.cpp
src/client/: callbacks.cpp  dispatch.cpp  lifecycle.cpp  metrics.cpp  reconnect.cpp  snapshots.cpp  strategies.cpp  strategy_engine_impl.cpp  subscription_impl.cpp  subscriptions.cpp
src/connection/: circuit_breaker.cpp  connection.cpp
src/core/: client.cpp  config.cpp  config_env.cpp
src/internal/: README.md  auth.hpp  book_engine.hpp  client_impl.hpp  connection.hpp  parser.hpp
src/strategies/: strategy_config.cpp
src/telemetry/: metrics_collector.cpp  otlp_exporter.cpp  prometheus_server.cpp  telemetry.cpp
tests/: README.md  TESTING.md  test_auth.cpp  test_authentication.cpp  test_backoff.cpp  test_book_checksum.cpp  test_circuit_breaker.cpp  test_client.cpp  test_config.cpp  test_config_env.cpp  test_connection.cpp  test_connection_config.cpp  test_edge_cases.cpp  test_error_handling.cpp  test_exception_safety.cpp  test_gap_detector.cpp  test_integration.cpp  test_logger.cpp  test_message_flow.cpp  test_metrics.cpp  test_offline_replay.cpp  test_parser.cpp  test_private_channels.cpp  test_queue.cpp  test_rate_limiter.cpp  test_strategies.cpp  test_strategy_advanced.cpp  test_stress_failure.cpp  test_subscription.cpp  test_telemetry.cpp  test_thread_safety.cpp
tools/: benchmark.cpp
